--- a/requirements.txt
+++ b/requirements.txt
@@ -54,7 +54,7 @@ nest-asyncio==1.5.4
 notebook==6.4.6
 numpy==1.21.4
 oauthlib==3.1.1
-opencv-python==4.5.4.60
+opencv-python-headless
 opt-einsum==3.3.0
 packaging==21.3
 pandas==1.3.4
