--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,8 @@
-Flask
-gunicorn
-h5py
-Jinja2
+Flask==2.0.2
+gunicorn==20.1.0
+numpy==1.21.4
+opencv-python==4.5.4.58
+Pillow==8.4.0
+scipy==1.7.2
 Keras
-numpy
-opencv-python
-pandas
-Pillow
-scipy
-tensorboard
 tensorflow-cpu
-tqdm
-urllib3
-utils
-h5py
